# graphrag-bigdata

./: .env.example  AGENTS.md  README.md  pyproject.toml
.hermes/: SOUL.md
config/: settings.yaml
config/vllm/: serving_args.yaml
scripts/: index.py  ingest.py  query.py  setup.py  start_vllm.sh
src/app_env/: __init__.py
src/graphrag_cli/: __init__.py
src/indexing/: __init__.py  minio_datasource.py  runner.py
src/inference/: __init__.py  client.py
src/ingestion/: __init__.py  extractor.py  pipeline.py
src/query/: __init__.py  global_search.py  local_search.py  runner.py
src/storage/: __init__.py  buckets.py  client.py  operations.py
