[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-bigdata"
version = "0.1.0"
description = "Arquitetura que coleta, processa e executa o framework graphrag com Minio e vLLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphrag>=3.0.8",
    "minio>=7.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
